Fix the build after r244975 (https://bugs.webkit.org/show_bug.cgi?id=197474)

Actually make use of the Keyboard Event when building with USE(UIKIT_KEYBOARD_ADDITIONS)
and substitute -> for . since it's now passed by reference.

* WebProcess/WebCoreSupport/ios/WebEditorClientIOS.mm:
(WebKit::WebEditorClient::handleInputMethodKeydown):

Canonical link: https://commits.webkit.org/211767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244982 268f45cc-cd09-0410-ab3c-d52691b4dbfc